Update login.html y scss e index

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -43,19 +43,21 @@
                     fill="outline"
                   ></ion-input-->
 
-                  <ion-input
-                    label="Correo electrónico"
-                    label-placement="floating"
-                    type="email"
-                    formControlName="email"
-                    placeholder="Ingrese su correo"
-                    fill="outline"
-                    autocapitalize="off"
-                    autocorrect="off"
-                    spellcheck="false"
-                    enterkeyhint="next"
-                     mode="ios"
-                  ></ion-input>
+                  <!-- Email -->
+                  <ion-item lines="inset" class="input-wrapper" mode="ios">
+                    <ion-label position="floating">Correo electrónico</ion-label>
+                    <ion-input
+                      type="email"
+                      formControlName="email"
+                      inputmode="email"
+                      autocapitalize="off"
+                      autocorrect="off"
+                      spellcheck="false"
+                      enterkeyhint="next"
+                      placeholder="Ingresa tu correo"
+                      mode="ios"
+                    ></ion-input>
+                  </ion-item>
 
                   @if (loginForm.get('email')?.invalid &&
                   loginForm.get('email')?.touched) {
