--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -14,14 +14,14 @@ ion-textarea {
 }
 
 .input-wrapper {
-  --background: #ffffff;
+  --background: #fff;
   --padding-start: 12px;
   --padding-end: 12px;
   --padding-top: 8px;
   --padding-bottom: 8px;
+  border: 1px solid #ccc;
   border-radius: 12px;
   margin-bottom: 16px;
-  font-size: 16px;
 }
 
 ion-input {
