--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -44,7 +44,7 @@
                   ></ion-input-->
 
                   <!-- Email -->
-                  <ion-item lines="inset" class="input-wrapper" mode="ios">
+                  <ion-item class="input-wrapper" lines="none" mode="ios">
                     <ion-label position="floating">Correo electrónico</ion-label>
                     <ion-input
                       type="email"
@@ -54,8 +54,7 @@
                       autocorrect="off"
                       spellcheck="false"
                       enterkeyhint="next"
-                      placeholder="Ingresa tu correo"
-                      mode="ios"
+                      placeholder="correo@ejemplo.com"
                     ></ion-input>
                   </ion-item>
 
