--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,34 +1,24 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  //top: 50%;
-  //transform: translateY(-50%);
-}
-
-#container ion-input,
-ion-textarea {
-  text-align: left;
-}
-
 .input-wrapper {
   --background: #fff;
-  --padding-start: 12px;
-  --padding-end: 12px;
-  --padding-top: 8px;
-  --padding-bottom: 8px;
   border: 1px solid #ccc;
   border-radius: 12px;
+  padding: 4px 12px;
   margin-bottom: 16px;
+
+  // Animación de foco
+  transition: border 0.2s ease-in-out;
+}
+
+.input-wrapper.ion-focused {
+  border: 2px solid var(--ion-color-primary);
 }
 
 ion-input {
-  font-size: 16px !important; // Evita zoom en iPhone
+  font-size: 16px;
 }
 
 ion-label {
   color: var(--ion-color-medium);
 }
+
 
